--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="row">
                     <div class="col-lg-2 col-md-2">
                         <div class="logo">
-                            <a href="./index.html"><img src="img/logo.png" alt=""></a>
+                            <a href="./index.html"><img src="img/rsz_1into_the_octagon2.png" alt=""></a>
                         </div>
                     </div>
                     <div class="col-lg-10 col-md-10">
@@ -47,7 +47,6 @@
                                 <li><a href="./become.html">Become A Fighter</a></li>
                                 <li><a href="./about-us.html">About Us</a></li>
                                 <li class="phone-num"><i class="fa fa-phone"></i><span></span></li>
-                                <!-- <li class="search-btn search-trigger"><i class="fa fa-search"></i></li> -->
                             </ul>
                         </nav>
                         <div id="mobile-menu-wrap"></div>
@@ -62,9 +61,10 @@
         <div class="hero-items owl-carousel">
             <div class="video-container">
                 <iframe width="75%" height="900px" src="https://www.youtube.com/embed/LWE79K2Ii-s?autoplay=1&mute=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
         </div>
     </div>
-    <!-- Hero Section End -->
+    <!-- Youtube Video End -->
     <!-- Popular sites Begin -->
     <section class="services-section spad">
         <div class="container">
@@ -94,132 +94,99 @@
                         <a href="http://www.bellator.com/" target="_blank"><button class="button">BELLATOR</button></a>
                     </div>
                 </div>
-                <!-- <div class="col-lg-3 col-md-6">
-                    <div class="single-services">
-                        <i class="flaticon-033-pump"></i>
-                        <h4>Cardio + Streching</h4>
-                    </div>
-                </div> -->
             </div>
         </div>
     </section>
-    <!-- Popular sites  End -->
-    <!-- Client Says Section Begin -->
+    <!-- Popular Sites  End -->
+    <!-- Octo Info Section Begin -->
     <section class="client-says set-bg" data-setbg="img/OctagonRed.jpg">
+        </div>
         <div class="container">
-            <!-- <div class="row"> -->
-                <div class="col-lg-9">
+                <div class="col-lg-12">
+                    <!-- Fighter Highlight-->
                     <div class="client-text">
-                        <section class="lifestyle-section spad">
+                        <div class="lifestyle-section spad">
                             <div class="row">
-                                <!-- <div class="row"></div> -->
                                     <div class="col-lg-6">
                                         <div class="lifestyle-text">
                                             <div class="section-title">
                                                 <h1>Fighter Highlight:</h1>
                                                 <h2>"There's 3 things in life that excite me. A woman, of course. Dinosaurs, and the violence of the Octagon"</h2>
                                                 <p>-GSP</p>
-                                                <a href="https://www.espn.com/mma/fighter/_/id/2335659/georges-st-pierre" target="_blank" class="primary-btn"><button class="button">Read More</button></a>
+                                                <div style="width: 550px; height: 120px">
+                                                <a href="https://www.espn.com/mma/fighter/_/id/2335659/georges-st-pierre" target="_blank" class="primary-btn"><button    class="button">Read More</button></a>
+                                                </div>
                                             </div>
-                                        </div>
-                                    </div>
-                                    <!-- <div class="col-lg-6">
-                                        <div class="lifestyle-img">
-                                            <!-- <img src="img/lifestyle.jpg" alt=""> -->
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </section>
+                        </div>
                     </div>
-                </div>
-            <!-- </div> -->
         </div>
-    </section>
-    <!-- Client Says Section End -->
-    <!-- Call To Section Begin -->
-    <!-- <section class="callto-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <div class="callto-text">
-                        <h2>Come & Train With Us</h2>
-                        <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <a href="#" class="primary-btn callto-btn">Join Now</a>
-                    </div>
+        <div class="herocontainer">
+            <div class="hero-items owl-carousel">
+                <div class="single-hero-item set-bg" data-setbg="img/slide-1.jpg">
+                </div>
+                <div class="single-hero-item set-bg" data-setbg="img/slide-2.jpg">
+                </div>
+                <div class="single-hero-item set-bg" data-setbg="img/slide-3.jpg">
+                </div>
+                <div class="single-hero-item set-bg" data-setbg="img/slide-4.jpg">
+                </div>
+                <div class="single-hero-item set-bg" data-setbg="img/slide-5.jpg">
                 </div>
             </div>
-        </div> -->
-    </section>
-    <!-- Call To Section End -->
-    <!-- Map Section Begin -->
-    <!-- <div class="map">
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24182.553681405774!2d-73.99529774360377!3d40.744003480221!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259737e225aa1%3A0x652ff78189c0e104!2sStuyvesant%20Town-Peter%20Cooper%20Village%2C%20New%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sbd!4v1567961277124!5m2!1sen!2sbd"
-            height="585" style="border:0" allowfullscreen></iframe>
-        <div class="map-address">
-            <div class="map-address-text">
-                <ul>
-                    <li>Main Str, no 23, <br />NY, New York PK 23589</li>
-                    <li>+546 990221 123 <br />contact@industryalinc.com</li>
-                </ul>
-            </div>
         </div>
-    </div> -->
-    <!-- Map Section End -->
-    <!-- News Ticker Section Begin -->
+    </section>
+    <!-- Footer Section Begins -->
     <footer class="footer-section">
+        <!-- Ticker Begin -->
         <div class="ticker">
             <div class="ticker-logo">
-              <div class="ticker-logo-channel">
-                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="160px" height="160px" viewBox="0 0 500 500">
-                </svg>
-              </div>
-          </div>
-            <!-- <div class="ticker-tip">
-              <div class="ticker-tip-info">
-                <i class ="icon-info">i</i>
-                <span>The Gas Mask will make you look like a badass.<span>
-               </div>
-            </div>   -->
+                <div class="ticker-logo-channel">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="160px" height="160px" viewBox="0 0 500 500">
+                    </svg>
+                </div>
+            </div>
             <div class="ticker-title">
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-                            <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>
-              <span>MMA News</span>             
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>
+                <span>MMA News</span>             
             </div>
             <div class="ticker-news">
               <span>
@@ -235,18 +202,18 @@
                 <script src="//rss.bloople.net/?url=https%3A%2F%2Fmmajunkie.usatoday.com%2Fnews%2Ffeed&detail=-1&limit=1&showtitle=false&type=js"></script>
               </span> -->
             </div>
-          </div>
+        </div>
     </footer>
     <!-- Footer Section End -->
     <!-- Search model -->
-	<div class="search-model">
+	<!-- <div class="search-model">
 		<div class="h-100 d-flex align-items-center justify-content-center">
 			<div class="search-close-switch">+</div>
 			<form class="search-model-form">
 				<input type="text" id="search-input" placeholder="Search here.....">
 			</form>
 		</div>
-	</div>
+	</div> -->
     <!-- Search model end -->
     
     <!-- Js Plugins -->
@@ -257,6 +224,8 @@
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/circle-progress.min.js"></script>
     <script src="js/main.js"></script>
+    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- <script type="text/javascript" src="js/main.js"></script> -->
 </body>
 
 </html>
